# cli-project

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
contract/: telemetry.yml
features/: cli.feature  environment.py  hello.feature  help.feature  init.feature  onboard.feature  telemetry.feature
features/steps/: cli_step_defs.py  hello_step_defs.py  help_step_defs.py  init_step_defs.py  onboard_step_defs.py  telemetry_step_defs.py
klick_brick_cli/: klickbrick.py
klick_brick_cli/resources/: git_commit_template
klickbrick/: brew.py  klickbrick.py  scripts.py  shell.py
klickbrick/resources/: onboard_checklist_template.md
klickbrick/resources/init/: readme_template  travis_template
klickbrick/resources/init/python/: black_config  pre_commit_config
openapi/: telemetry.yml
server/: app.py  server.py
tests/: test_cli_project.py  test_klickbrick.py  test_shell.py
