[tool.poetry]
name = "klickbrick"
version = "0.0.6"
description = ""
authors = ["David Knepprath <david.knepprath@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
behave = "^1.2"
pre-commit = "^2.7"

[tool.poetry.scripts]
klickbrick = 'klickbrick.klickbrick:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
