[tool.poetry]
name = "klickbrick"
version = "0.0.9"
description = ""
authors = ["David Knepprath <david.knepprath@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
behave = "^1.2"
pre-commit = "^2.7"

[tool.poetry.scripts]
klickbrick = 'klickbrick.klickbrick:main'

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

